# herdr-board

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  handoff.md  herdr-plugin.toml  schema.sql
.github/: PULL_REQUEST_TEMPLATE.md
crates/board-cli/: Cargo.toml
crates/board-cli/src/: args.rs  daemon.rs  helpers.rs  main.rs  scope.rs
crates/board-cli/src/commands/: card.rs  column.rs  discovery.rs  mod.rs  run.rs
crates/board-cli/src/daemon/: tests.rs
crates/board-cli/tests/: integration.rs
crates/board-cli/tests/fixtures/: fake-agent.sh
crates/board-cli/tests/integration/: events.rs  harness.rs  lifecycle.rs  scope.rs  stop.rs  support.rs
crates/board-core/: Cargo.toml
crates/board-core/src/: capability.rs  client.rs  config.rs  db.rs  engine.rs  harness.rs  launch.rs  lib.rs  model.rs  paths.rs  pi_catalog.rs  prompt.rs  protocol.rs  scope.rs  spawn.rs
crates/board-core/src/client/: fake.rs  mod.rs  traits.rs  unix.rs
crates/board-core/src/db/: boards_columns.rs  cards_comments.rs  migrations.rs  mod.rs  rows.rs  runs.rs
crates/board-core/src/engine/: lifecycle.rs  mod.rs  signals.rs  transitions.rs  validation.rs
crates/board-core/tests/: capability.rs  client.rs  config.rs  db.rs  db_atomic.rs  engine.rs  fake_client.rs  harness.rs  launch_spec.rs  pi_catalog.rs  prompt.rs  protocol.rs  protocol17_spawn.rs  scope.rs  space_key.rs
crates/board-core/tests/db/: crud.rs  migrations.rs  runs.rs
crates/board-daemon/: Cargo.toml
crates/board-daemon/src/: dispatch.rs  herdr_snapshot.rs  lib.rs  ops.rs  server.rs  session.rs  settings.rs  singleton.rs  spawner.rs  state.rs  store.rs  supervisor.rs  template.rs  tests.rs  watchers.rs
crates/board-daemon/src/dispatch/: enqueue.rs  finalize.rs  mod.rs  pass.rs  space.rs  tests.rs
crates/board-daemon/src/dispatch/tests/: concurrency.rs  enqueue.rs  finalize.rs  mod.rs  placement.rs
crates/board-daemon/src/herdr_snapshot/: tests.rs
crates/board-daemon/src/ops/: boards.rs  cards.rs  columns.rs  comments.rs  discovery.rs  mod.rs  runs.rs  tests.rs
crates/board-daemon/src/ops/tests/: boards.rs  cards.rs  discovery.rs  lifecycle.rs  mod.rs  validation.rs
crates/board-daemon/src/server/: tests.rs
crates/board-daemon/src/session/: tests.rs
crates/board-daemon/src/settings/: tests.rs
crates/board-daemon/src/spawner/: herdr.rs  local.rs  mod.rs  placement.rs  tests.rs
crates/board-daemon/src/spawner/tests/: configured.rs  failures.rs  local.rs  managed.rs  mod.rs  placement.rs
crates/board-daemon/src/supervisor/: tests.rs
crates/board-daemon/src/watchers/: herdr.rs  local.rs  mod.rs  signals.rs  tests.rs  timeout.rs
crates/board-daemon/src/watchers/tests/: mod.rs  recovery.rs  signals.rs  sockets.rs  timeout.rs
crates/board-tui/: Cargo.toml
crates/board-tui/examples/: tui_fake.rs
crates/board-tui/src/: app.rs  editor.rs  forms.rs  lib.rs  testkit.rs  view.rs
crates/board-tui/src/app/: board.rs  confirm.rs  detail.rs  forms.rs  mod.rs  mouse.rs  picker.rs
crates/board-tui/src/forms/: builders.rs  fields.rs  mod.rs  options.rs  submit.rs  tests.rs
crates/board-tui/src/view/: board.rs  detail.rs  form.rs  layout.rs  mod.rs  overlays.rs  tests.rs
crates/board-tui/tests/: forms.rs  snapshots.rs  update.rs
crates/board-tui/tests/snapshots/: snapshots__archived_cards_all.snap  snapshots__archived_cards_only.snap  snapshots__awaiting_card_detail.snap  snapshots__awaiting_card_detail_120x35.snap  snapshots__awaiting_idle_detail.snap  snapshots__board_picker_120x35.snap  snapshots__board_picker_80x24.snap  snapshots__card_detail.snap  snapshots__card_detail_fullscreen_120x35.snap  snapshots__card_detail_history_latest.snap  snapshots__card_detail_history_scrolled.snap  snapshots__card_detail_popup_120x35.snap  snapshots__column_form.snap  snapshots__column_form_hostile.snap  snapshots__delete_column_picker.snap  snapshots__done_card_detail.snap  snapshots__edit_card_modal.snap  snapshots__empty_board.snap  snapshots__help_overlay.snap  snapshots__move_after.snap  snapshots__move_before.snap  snapshots__new_card_modal.snap  snapshots__new_card_modal_fallback.snap  snapshots__new_card_modal_pi_custom_low.snap  snapshots__seeded_board_120x35.snap  snapshots__seeded_board_80x24.snap  snapshots__toast_error.snap
crates/board-tui/tests/update/: detail.rs  forms.rs  helpers.rs  scope.rs  support_nav.rs
docs/: README.md  design.md  herdr.md  implementation.md  protocol.md  releasing.md  research.md  testing.md
e2e/: 01-core.sh  02-kanban-grid.sh  03-sessions.sh  04-fail-on-fail.sh  05-retry.sh  06-silent-exit.sh  07-cancel.sh  08-column-timeout.sh  09-comment-context.sh  10-archive-filter-title.sh  11-pi-harness.sh  12-cwd-boards.sh  13-jump-to-pane.sh  14-column-config.sh  15-awaiting.sh  16-managed-p17.sh  README.md  (+13 more)
(+50 files in other folders)
