[package]
name = "board-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
board-core = { workspace = true }
board-herdr = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
libc = { workspace = true }
tempfile = { workspace = true }
