[package]
name = "board-tui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
board-core = { workspace = true }
anyhow = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
tui-textarea = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
board-core = { workspace = true, features = ["fake-client"] }

[features]
# Re-exported so `cargo test -p board-tui --features fake-client` (and the
# example binary) can build FakeBoardClient-backed harnesses.
fake-client = ["board-core/fake-client"]

[[example]]
name = "tui_fake"
required-features = ["fake-client"]
