[package]
name = "board-tui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
board-core = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
tui-textarea = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
board-core = { workspace = true, features = ["fake-client"] }

[features]
# Re-exported so `cargo test -p board-tui --features fake-client` (and the
# example binary) can build FakeBoardClient-backed harnesses.
fake-client = ["board-core/fake-client"]

[[example]]
name = "tui_fake"
required-features = ["fake-client"]

# The integration tests drive a FakeBoardClient / FakeEditor from `testkit`,
# both gated behind `fake-client`; declare the dependency so a plain
# `cargo test --workspace` (no `--all-features`) skips rather than fails to
# compile them.
[[test]]
name = "update"
required-features = ["fake-client"]

[[test]]
name = "snapshots"
required-features = ["fake-client"]
